added dbs to dbt_project config

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -38,5 +38,17 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   jaffle_shop:
     # Applies to all files under models/example/
-    +materialized: table
+    staging:
+      +enabled: true
+      +materialized: view
+      +database: staging
+      
+    conformed:
+      +enabled: true
+      +materialized: view
+      +database: conformed
 
+    marts:
+      +enabled: true
+      +materialized: table
+      +database: marts
