--- a/models/sources.yml
+++ b/models/sources.yml
@@ -10,3 +10,11 @@ sources:
             description: One record per customer.
           - name: orders
             description: One record per order. Includes cancelled and deleted orders.
+
+    - name: stripe
+      description: stripe transactions
+      database: raw
+      schema: stripe
+      tables: 
+          - name: payments
+            description: stripe payments transactions
