updating model dir structure to align with best practices

--- a/models/staging/jaffle_shop/_jaffle_shop__models.yml
+++ b/models/staging/jaffle_shop/_jaffle_shop__models.yml
@@ -1,7 +1,7 @@
 version: 2
 
 models:
-  - name: stg_customers
+  - name: stg_jaffle_shop__customers
     description: staging customers
     config:
       materialized: view
